--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <div class="row">
                 <div class="col-12 col-lg-6">
                   <div class="about-img mb-0 d-flex justify-content-center">
-                    <img src="assets/img/IMG_1807.JPG" style="width: 90%;">
+                    <img src="assets/img/pro.JPG" style="width: 90%;">
                   </div>
                 </div>
                 <div class="col-12 col-lg-6">
