--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           <li><a class="nav-link scrollto active" href="#services">Experience</a></li>
           <li><a class="nav-link scrollto active" href="#work">Skills</a></li>
           <li><a class="nav-link scrollto active" href="#projects">Projects</a></li>
+          <li><a class="nav-link scrollto active" href="#achievements">Achievements</a></li>
           <li><a class="nav-link scrollto active" href="#contact">contact</a></li>
 
         </ul>
@@ -737,6 +738,124 @@
             </div>
 
 
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="achievements" class="services-mf pt-5 route">
+      <div class="container">
+        <div class="row d-flex justify-content-center">
+          <div class="col-sm-12">
+            <div class="title-box text-center">
+              <h3 class="title-a">
+                Selected Achievements
+              </h3>
+                <div class="line-mf"></div>
+            </div>
+          </div>
+          <div class="row d-flex justify-content-center align-items-center">
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="service-box">
+                  <div class="service-ico">
+                  <div class="service-content">
+                    <h2 class="s-title" style="text-transform: none;">Working as a Reviewer for the Computers in Education Division for ASEE Annual Conference, 2025</h2>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="service-box">
+                  <div class="service-ico">
+                  <div class="service-content">
+                    <h2 class="s-title" style="text-transform: none;">Received AWS All Builders Welcome Grant to attend AWS annual Conference in Nevada Las Vegas, 2022</h2>
+                    <p class="s-description text-center">
+                      <a href="https://aws.amazon.com/events/" class="btn btn-primary">View</a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="service-box">
+                  <div class="service-ico">
+                  <div class="service-content">
+                    <h2 class="s-title" style="text-transform: none;">Senior Year Success story got published on UNDP Pakistan YouTube Channel, Twitter Account and Web page</h2>
+                    <p class="s-description text-center">
+                      <a href="https://www.undp.org/pakistan/stories/navigating-ecosystem-stories-pakistani-women-tech
+                      " class="btn btn-primary">View</a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 mt-3 ">  
+              <div class="service-box ">
+                <div class="service-content">
+                  <div class="row">
+                    <div class="col-12 col-lg-6 mt-3 mt-lg-0">
+                      <div class="pro_img">
+                        <img class="w-100 rounded-3" height="370" src="assets/img/ach.jpeg" alt="">
+                      </div>
+                    </div>
+                    <div class="col-12 col-lg-6 d-flex align-items-center ">
+                      <p class="text-start" style="color: black;">
+                        2nd Position in IEEE IAS CMD Global Humanitarian Project Competition, 2020
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12">
+              <div class="service-box">
+                  <div class="service-ico">
+                  <div class="service-content">
+                    <h2 class="s-title mb-0" style="text-transform: none;">Represented Pakistan as a delegate in Global Goals MUN, Malaysia</h2>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 mt-3 ">  
+              <div class="service-box ">
+                <div class="service-content">
+                  <div class="row">
+                    <div class="col-12 col-lg-6 mt-3 mt-lg-0">
+                      <div class="pro_img">
+                        <img class="w-100 rounded-3" height="370" src="assets/img/ach2.jpeg" alt="">
+                      </div>
+                    </div>
+                    <div class="col-12 col-lg-6 d-flex align-items-center ">
+                      <p class="text-start" style="color: black;">
+                        Organized programming workshops in government schools of Lahore Pakistan, counseling sessions for female students as Chairperson Women in Engineering Committee IEEE WIE UET and Volunteer at Pakistan Students Welfare Organization
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 mt-3 ">  
+              <div class="service-box ">
+                <div class="service-content">
+                  <div class="row">
+                    <div class="col-12 col-lg-6 mt-3 mt-lg-0">
+                      <div class="pro_img">
+                        <img class="w-100 rounded-3" height="370" src="assets/img/ach3.jpeg" alt="">
+                      </div>
+                    </div>
+                    <div class="col-12 col-lg-6 d-flex align-items-center ">
+                      <p class="text-start" style="color: black;">
+                        Organized various Conferences, ICOSST 2018, APES 2017, UET Lahore
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+          
           </div>
         </div>
       </div>
