--- a/index.html
+++ b/index.html
@@ -846,6 +846,24 @@
                     </div>
                     <div class="col-12 col-lg-6 d-flex align-items-center ">
                       <p class="text-start" style="color: black;">
+                        Research Scientist Aug 2019 - Dec 2020
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 mt-3 ">  
+              <div class="service-box ">
+                <div class="service-content">
+                  <div class="row">
+                    <div class="col-12 col-lg-6 mt-3 mt-lg-0">
+                      <div class="pro_img">
+                        <img class="w-100 rounded-3" height="370" src="assets/img/ach4.png" alt="">
+                      </div>
+                    </div>
+                    <div class="col-12 col-lg-6 d-flex align-items-center ">
+                      <p class="text-start" style="color: black;">
                         Organized various Conferences, ICOSST 2018, APES 2017, UET Lahore
                       </p>
                     </div>
@@ -853,6 +871,43 @@
                 </div>
               </div>
             </div>
+            <div class="col-12 mt-3 ">  
+              <div class="service-box ">
+                <div class="service-content">
+                  <div class="row">
+                    <div class="col-12 col-lg-6 mt-3 mt-lg-0">
+                      <div class="pro_img">
+                        <img class="w-100 rounded-3" height="370" src="assets/img/ach5.png" alt="">
+                      </div>
+                    </div>
+                    <div class="col-12 col-lg-6 d-flex align-items-center ">
+                      <p class="text-start" style="color: black;">
+                        Organized various Conferences, ICOSST 2018, APES 2017, UET Lahore
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 mt-3 ">  
+              <div class="service-box ">
+                <div class="service-content">
+                  <div class="row">
+                    <div class="col-12 col-lg-6 mt-3 mt-lg-0">
+                      <div class="pro_img">
+                        <img class="w-100 rounded-3" height="370" src="assets/img/ach6.png" alt="">
+                      </div>
+                    </div>
+                    <div class="col-12 col-lg-6 d-flex align-items-center ">
+                      <p class="text-start" style="color: black;">
+                        Organized various Conferences, ICOSST 2018, APES 2017, UET Lahore
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
 
 
           
