--- a/index.html
+++ b/index.html
@@ -634,32 +634,26 @@
                     </ul>
                   </p>
                   <p class="s-description text-center mt-3">
-                    <p style="color:blue">Senior – Year Project Advisor</p>
-                    <ul>
-                      <li style="text-align:left;">FAST School of Computing, Lahore</li>
-                      <li style="text-align:left;">Aug 2024 – Present</li>
-                      <li style="text-align:left;">Advising three senior year projects in the domains of data science, AI, NLP</li>
-                    </ul>
-                  </p>
-                  <p class="s-description text-center mt-3">
                     <p style="color:blue">Teaching Assistant</p>
                     <ul>
-                      <li style="text-align:left;">Entrepreneurship and Innovation Teaching Assistant (ENGR 200)</li>
+                      <li style="text-align:left;">Entrepreneurship and Innovation (ENGR 200)</li>
                       <li style="text-align:left;">UC Irvine</li>
                       <li style="text-align:left;">(Instructor: Prof. Neil Sahota)</li>
                       <li style="text-align:left;">Sep 2022 – March 2023</li>
                     </ul>
                   </p>
                   <p class="s-description text-center mt-3">
-                    <p style="color:blue">Digital Logic Design Lab Teaching Assistant: UC Irvine</p>
+                    <p style="color:blue">Digital Logic Design Lab</p>
                     <ul>
+                      <li style="text-align:left;">UC Irvine</li>
                       <li style="text-align:left;">(Instructor: Professor QV Dang)</li>
                       <li style="text-align:left;">April 2022 – June 2022 and Aug 2022</li>
                     </ul>
                   </p>
                   <p class="s-description text-center mt-3">
-                    <p style="color:blue">Electric Network Analysis Lab Teaching Assistant: UC Irvine</p>
+                    <p style="color:blue">Electric Network Analysis Lab</p>
                     <ul>
+                      <li style="text-align:left;">UC Irvine</li>
                       <li style="text-align:left;">(Instructor: Professor Franco Flavis)</li>
                       <li style="text-align:left;">Jan 2022 – March 2022</li>
                     </ul>
@@ -841,24 +835,6 @@
                   <div class="row">
                     <div class="col-12 col-lg-6 mt-3 mt-lg-0">
                       <div class="pro_img">
-                        <img class="w-100 rounded-3" height="370" src="assets/img/ach3.jpeg" alt="">
-                      </div>
-                    </div>
-                    <div class="col-12 col-lg-6 d-flex align-items-center ">
-                      <p class="text-start" style="color: black;">
-                        Research Scientist Aug 2019 - Dec 2020
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 mt-3 ">  
-              <div class="service-box ">
-                <div class="service-content">
-                  <div class="row">
-                    <div class="col-12 col-lg-6 mt-3 mt-lg-0">
-                      <div class="pro_img">
                         <img class="w-100 rounded-3" height="370" src="assets/img/ach4.png" alt="">
                       </div>
                     </div>
@@ -915,98 +891,6 @@
         </div>
       </div>
     </section>
-
-    <!-- <section id="projects" class="services-mf pt-5 route">
-      <div class="container">
-        <div class="row d-flex justify-content-center mt-4">
-          <div class="col-sm-12">
-            <div class="title-box text-center">
-              <h3 class="title-a">
-                PAST Research
-              </h3>
-                <div class="line-mf"></div>
-            </div>
-          </div>
-          <div class="row d-flex justify-content-center">
-            <div class="col-12 col-md-6 col-lg-4 ">
-              <div class="service-box ">
-                <div class="service-ico"> 
-                </div>
-
-                <div class="service-content">
-                  <h2 class="s-title">Research Scientist Dec 2020 - Sep 2021</h2>
-
-
-                  <p class="s-description text-center">
-                    <ul>
-                      <li style="text-align:left;">Pakistan office of Ujala Technologies, Cincinnati Ohio</li>
-                      <li style="text-align:left;">Implemented the embedded firmware of a low-cost portable mechanical ventilatorn</li>
-                      <li style="text-align:left;">Performed design verification and reviews for FDA and IRB approval</li>
-                    </ul>
-                    <span class="fw-bold d-flex text-start">Outcome:</span>
-                    <ul>
-                      <li style="text-align:left;">A Low-cost, Automated, Portable Mechanical Ventilator for Developing World, Conference Paper, IEEE GHTC 2021</li>
-                    </ul>
-                  </p>
-
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4 mt-3 mt-lg-0">
-              <div class="service-box ">
-                <div class="service-ico"> 
-                </div>
-
-                <div class="service-content">
-                  <h2 class="s-title">Research Scientist Aug 2019 - Dec 2020</h2>
-
-
-                  <p class="s-description text-center">
-                    <ul>
-                      <li style="text-align:left;">Pakistan office of Integrated Medical Sensors, Irvine California</li>
-                      <li style="text-align:left;">Analyzed time-series data from IMS continuous glucose monitoring (CGM) devices for five patients, comparing its performance with existing systems</li>
-                      <li style="text-align:left;">Researched continuous glucose monitoring devices, identified research gaps, and led design reviews and verification processes for FDA and IRB approval</li>
-                    </ul>
-                    <span class="fw-bold d-flex text-start">Outcome:</span>
-                    <ul>
-                      <li style="text-align:left;">Eventually led IMS to win the DCB Open Innovation Challenge 2024</li>
-                    </ul>
-                  </p>
-
-                </div>
-              </div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4 mt-3 mt-lg-0">
-              <div class="service-box ">
-                <div class="service-ico"> 
-                </div>
-
-                <div class="service-content">
-                  <h2 class="s-title">Research Assistant Aug 2018 – Aug 2019</h2>
-
-
-                  <p class="s-description text-center">
-                    <ul>
-                      <li style="text-align:left;">University of Engineering and Technology, Lahore, Pakistan</li>
-                      <li style="text-align:left;">Implemented Firmware of a low-cost health monitoring system</li>
-                      <li style="text-align:left;">Integrated Wireless module for seamless communication between different components</li>
-                    </ul>
-                    <span class="fw-bold d-flex text-start">Outcome:</span>
-                    <ul>
-                      <li style="text-align:left;">A Low-cost, Automated, Portable Mechanical Ventilator for Developing World, Conference Paper, IEEE GHTC 2021</li>
-                      <li style="text-align:left;">A smart, low cost, wearable technology for remote patient monitoring, Conference paper, IEEE GCIoT 2019</li>
-                    </ul>
-                  </p>
-
-                </div>
-              </div>
-            </div>
-
-
-          </div>
-        </div>
-      </div>
-    </section> -->
 
 
 
