--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     </ul>
                   </p>
                   <p class="s-description text-center mt-3">
-                    <p style="color:blue">Research Scientist Aug 2019 - Dec 2020r</p>
+                    <p style="color:blue">Research Scientist Aug 2019 - Dec 2020</p>
                     <ul>
                       <li style="text-align:left;">Pakistan office of Integrated Medical Sensors, Irvine California</li>
                       <li style="text-align:left;">Analyzed time-series data from IMS continuous glucose monitoring (CGM) devices for five patients, comparing its performance with existing systems</li>
@@ -626,11 +626,21 @@
                 <div class="service-content">
                   <h2 class="s-title">Teaching Experience</h2>
                   <p class="s-description text-center">
-                    <p style="color:blue">Lecturer</p>
+                    <p style="color:blue">Teaching Assistant</p>
                     <ul>
+                      <li style="text-align:left;">Lecturer</li>
                       <li style="text-align:left;">Department of AI and Data Science, FAST School of Computing, Lahore</li>
                       <li style="text-align:left;">Jan 2024 – Present</li>
                       <li style="text-align:left;">Courses: Data Mining, Data Science, Data Analysis and Visualization</li>
+                    </ul>
+                  </p>
+                  <p class="s-description text-center mt-3">
+                    <p style="color:blue">Teaching Assistant</p>
+                    <ul>
+                      <li style="text-align:left;">Senior – Year Project Advisor</li>
+                      <li style="text-align:left;">FAST School of Computing, Lahore</li>
+                      <li style="text-align:left;">Aug 2024 – Present</li>
+                      <li style="text-align:left;">Advising three senior year projects in the domains of data science, AI, NLP</li>
                     </ul>
                   </p>
                   <p class="s-description text-center mt-3">
@@ -643,16 +653,18 @@
                     </ul>
                   </p>
                   <p class="s-description text-center mt-3">
-                    <p style="color:blue">Digital Logic Design Lab</p>
+                    <p style="color:blue">Teaching Assistant</p>
                     <ul>
+                      <li style="text-align:left;">Digital Logic Design Lab</li>
                       <li style="text-align:left;">UC Irvine</li>
                       <li style="text-align:left;">(Instructor: Professor QV Dang)</li>
                       <li style="text-align:left;">April 2022 – June 2022 and Aug 2022</li>
                     </ul>
                   </p>
                   <p class="s-description text-center mt-3">
-                    <p style="color:blue">Electric Network Analysis Lab</p>
+                    <p style="color:blue">Teaching Assistant</p>
                     <ul>
+                      <li style="text-align:left;">Electric Network Analysis Lab</li>
                       <li style="text-align:left;">UC Irvine</li>
                       <li style="text-align:left;">(Instructor: Professor Franco Flavis)</li>
                       <li style="text-align:left;">Jan 2022 – March 2022</li>
