--- a/index.html
+++ b/index.html
@@ -626,18 +626,18 @@
                 <div class="service-content">
                   <h2 class="s-title">Teaching Experience</h2>
                   <p class="s-description text-center">
-                    <p style="color:blue">Teaching Assistant</p>
+                    <p style="color:blue">Lecturer</p>
                     <ul>
-                      <li style="text-align:left;">Lecturer</li>
+                      <!-- <li style="text-align:left;">Lecturer</li> -->
                       <li style="text-align:left;">Department of AI and Data Science, FAST School of Computing, Lahore</li>
                       <li style="text-align:left;">Jan 2024 – Present</li>
                       <li style="text-align:left;">Courses: Data Mining, Data Science, Data Analysis and Visualization</li>
                     </ul>
                   </p>
                   <p class="s-description text-center mt-3">
-                    <p style="color:blue">Teaching Assistant</p>
+                    <p style="color:blue">Senior – Year Project Advisor</p>
                     <ul>
-                      <li style="text-align:left;">Senior – Year Project Advisor</li>
+                      <!-- <li style="text-align:left;">Senior – Year Project Advisor</li> -->
                       <li style="text-align:left;">FAST School of Computing, Lahore</li>
                       <li style="text-align:left;">Aug 2024 – Present</li>
                       <li style="text-align:left;">Advising three senior year projects in the domains of data science, AI, NLP</li>
