--- a/index.html
+++ b/index.html
@@ -215,6 +215,122 @@
       </div>
     </section>
 
+  </div>
+</div>
+</div>
+</div>
+</div>
+<div class="row d-flex justify-content-center mt-4">
+<div class="col-sm-12">
+<div class="title-box text-center">
+<h3 class="title-a">
+  Advised Final Year Projects
+</h3>
+  <div class="line-mf"></div>
+</div>
+</div>
+<div class="row d-flex justify-content-center">
+<div class="col-12 ">
+<div class="service-box ">
+
+  <div class="service-content">
+    <div class="row">
+      <div class="col-12 col-lg-6">
+        <div class="pro_img">
+          <img class="w-100 rounded-3" src="assets/img/pro.jpeg" alt="">
+        </div>
+      </div>
+      <div class="col-12 col-lg-6 d-flex align-items-center mt-3 mt-lg-0">
+        <p class="text-start" style="color: black;">
+          Fetal brain anomaly detection using medical image analysis 
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+<div class="col-12 mt-3 ">  
+<div class="service-box ">
+  <div class="service-content">
+    <div class="row">
+      <div class="col-12 col-lg-6 d-flex align-items-center ">
+        <p class="text-start" style="color: black;">
+          Detection and segmentation of brain tumors using multimodal data integration and medical image analysis 
+        </p>
+      </div>
+      <div class="col-12 col-lg-6 mt-3 mt-lg-0">
+        <div class="pro_img">
+          <img class="w-100 rounded-3" height="260" src="assets/img/pro2.jpeg" alt="">
+        </div>
+      </div>
+      </div>
+  </div>
+</div>
+</div>
+<div class="col-12 mt-3 ">
+<div class="service-box ">
+  <div class="service-content">
+    <div class="row">
+      <div class="col-12 col-lg-6">
+        <div class="pro_img">
+          <img class="w-100 rounded-3" src="assets/img/pro3.jpeg" alt="">
+        </div>
+      </div>
+      <div class="col-12 col-lg-6 d-flex align-items-center mt-3 mt-lg-0">
+        <p class="text-start" style="color: black;">
+          Developing and maintaining dynamic ETL pipelines to automate the extraction, transformation, and loading of data from proposed sources for marketing analytics
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+
+<div class="col-12 mt-3 ">
+  <div class="service-box ">
+    <div class="service-content">
+      Video advertisement generation using multimodal data and generative AI
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+</div>
+</div>
+</div>
+
+<div class="row d-flex justify-content-center mt-4">
+  <div class="col-sm-12">
+  <div class="title-box text-center">
+  <h3 class="title-a">
+    Co-advised MS Thesis
+  </h3>
+    <div class="line-mf"></div>
+  </div>
+  </div>
+  <div class="row d-flex justify-content-center">
+  <div class="col-12 ">
+  <div class="service-box ">
+  
+    <div class="service-content">
+      <div class="row">
+        <div class="col-12 col-lg-6">
+          <div class="pro_img">
+            <p class="text-start" style="color: black;">
+             1--Few-Shot and Zero-Shot Learning for Sentiment Analysis in Low-Resource Languages Using Large Language Models
+          </div>
+        </div>
+        <div class="col-12 col-lg-6 d-flex align-items-center mt-3 mt-lg-0">
+          <p class="text-start" style="color: black;">
+            2--Understanding Customer Satisfication & Human Agent Behaviour via LLM-Driven Analysis
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  
 
     <section id="work" class="portfolio-mf sect-pt4 route">
       <div class="container">
@@ -676,77 +792,7 @@
             </div>
           </div>
         </div>
-        <div class="row d-flex justify-content-center mt-4">
-          <div class="col-sm-12">
-            <div class="title-box text-center">
-              <h3 class="title-a">
-                advised Projects
-              </h3>
-                <div class="line-mf"></div>
-            </div>
-          </div>
-          <div class="row d-flex justify-content-center">
-            <div class="col-12 ">
-              <div class="service-box ">
-
-                <div class="service-content">
-                  <div class="row">
-                    <div class="col-12 col-lg-6">
-                      <div class="pro_img">
-                        <img class="w-100 rounded-3" src="assets/img/pro.jpeg" alt="">
-                      </div>
-                    </div>
-                    <div class="col-12 col-lg-6 d-flex align-items-center mt-3 mt-lg-0">
-                      <p class="text-start" style="color: black;">
-                        Fetal brain anomaly detection using ultrasound image employing computer vision and deep learning algorithms
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 mt-3 ">  
-              <div class="service-box ">
-                <div class="service-content">
-                  <div class="row">
-                    <div class="col-12 col-lg-6 d-flex align-items-center ">
-                      <p class="text-start" style="color: black;">
-                        Rapid detection and segmentation of brain tumors using transfer learning
-                      </p>
-                    </div>
-                    <div class="col-12 col-lg-6 mt-3 mt-lg-0">
-                      <div class="pro_img">
-                        <img class="w-100 rounded-3" height="260" src="assets/img/pro2.jpeg" alt="">
-                      </div>
-                    </div>
-                    
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-12 mt-3 ">
-              <div class="service-box ">
-                <div class="service-content">
-                  <div class="row">
-                    <div class="col-12 col-lg-6">
-                      <div class="pro_img">
-                        <img class="w-100 rounded-3" src="assets/img/pro3.jpeg" alt="">
-                      </div>
-                    </div>
-                    <div class="col-12 col-lg-6 d-flex align-items-center mt-3 mt-lg-0">
-                      <p class="text-start" style="color: black;">
-                        Develop and maintain dynamic ETL pipelines to automate the extraction, transformation, and loading of data from proposed sources and ensure that pipelines are scalable to handle increasing volumes of data
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-
-          </div>
-        </div>
-      </div>
+        
     </section>
 
     <section id="achievements" class="services-mf pt-5 route">
