--- a/index.html
+++ b/index.html
@@ -144,15 +144,7 @@
                     </ul>
                   </p>
 
-                  <p class="s-description text-center">
-                    <p style="color:blue">Remote Research Assistant, School of Education, UCI</p>
-                    <p style="color:black">Generative AI</p>
-                    <ul>
-                      <li style="text-align:left;">Researched college students’ perceptions of generative AI across majors by designing surveys and analyzing responses for insights </li>
-                      <li style="text-align:left;">Compared the performance of ChatGPT and Google Bard across various tasks and analyzed the results against students’ perceptions, leading to a journal paper submission </li>
-                      <li style="text-align:left; font-weight: bold;">Outcome: GenAI-101: What undergraduate students need to know and actually know about generative AI, Journal Paper, Computers & Education: Artificial Intelligence Journal, 2024[in-review]</li>
-                    </ul>
-                  </p>
+             
                   
                   <p class="s-description text-center">
                     <p style="color:blue">Computer science department, UC Irvine, July 2022 -- Aug 2022</p>
@@ -747,7 +739,7 @@
                       <!-- <li style="text-align:left;">Lecturer</li> -->
                       <li style="text-align:left;">Department of AI and Data Science, FAST School of Computing, Lahore</li>
                       <li style="text-align:left;">Jan 2024 – Present</li>
-                      <li style="text-align:left;">Courses: Data Mining, Data Science, Data Analysis and Visualization</li>
+                      <li style="text-align:left;">Courses: Data Mining, Data Science, Big Data Analytics, Data Analysis and Visualization</li>
                     </ul>
                   </p>
                   <p class="s-description text-center mt-3">
@@ -756,7 +748,7 @@
                       <!-- <li style="text-align:left;">Senior – Year Project Advisor</li> -->
                       <li style="text-align:left;">FAST School of Computing, Lahore</li>
                       <li style="text-align:left;">Aug 2024 – Present</li>
-                      <li style="text-align:left;">Advising three senior year projects in the domains of data science, AI, NLP</li>
+                      <li style="text-align:left;">Advising four senior year projects in the domains of data science, AI, NLP</li>
                     </ul>
                   </p>
                   <p class="s-description text-center mt-3">
