--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <ul>
                       <li style="text-align:left;">Applying statistical analysis and predictive modeling techniques to predict students’ mental health and academic performance in college</li>
                       <li style="text-align:left;">Employing explainable AI techniques to reveal the model decision-making process, leading to a conference paper submission</li>
-                      <li style="text-align:left; font-weight: bold;">Outcome: Enhancing Transparency in Educational Decision-Making using XAI Technique, Conference paper, ASEE 2025 [Abstract accepted, Final Paper In-review]</li>
+                      <li style="text-align:left; font-weight: bold;">Outcome: Enhancing Transparency in Educational Decision-Making using XAI Technique, Conference paper, ASEE 2025 [Accepted at ASEE 2025]</li>
                     </ul>
                   </p>
 
@@ -180,6 +180,8 @@
                       <li style="text-align:left;">Analyzed time-series data from IMS continuous glucose monitoring (CGM) devices for five patients, comparing its performance with existing systems</li>
                       <li style="text-align:left;">Researched continuous glucose monitoring devices, identified research gaps, and led design reviews and verification processes for FDA and IRB approval</li>
                       <li style="text-align:left; font-weight: bold;">Outcome: Eventually led IMS to win the DCB Open Innovation Challenge 2024</li>
+                      <li style="text-align:left; font-weight: bold;">Outcome: A Novel Semiconductor based Continuous Multi-Sensor, Multi-Modal Health
+                        Monitoring Platform for Chronic Disease Management – Human Feasibility [Journal Paper In Preparation]
                     </ul>
                   </p>
                   <p class="s-description text-center mt-3">
